--- a/involvd_sdk/build.gradle
+++ b/involvd_sdk/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation "com.android.support:support-vector-drawable:$supportLibraryVersion"
     implementation "com.android.support:design:$supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation "com.android.support:cardview-v7:$supportLibraryVersion"
     implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.github.iamrobj:Radically-Reusable:0.5'
