--- a/involvd_sdk/build.gradle
+++ b/involvd_sdk/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    ext.kotlin_version = '1.2.60'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -14,26 +24,10 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "0.1"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        consumerProguardFiles 'involvd-proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-        debug {
-            minifyEnabled false
-            debuggable false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-        debugProguard {
-            minifyEnabled true
-            debuggable false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+    android.defaultConfig.javaCompileOptions.annotationProcessorOptions.includeCompileClasspath = true
     dataBinding {
         enabled = true
     }
@@ -47,6 +41,11 @@ android {
     }
     kapt {
         generateStubs = true
+    }
+    buildTypes{
+        debug { }
+        debugProguard { }
+        release { }
     }
 }
 
@@ -79,7 +78,4 @@ dependencies {
     implementation "android.arch.persistence.room:rxjava2:$room"
     annotationProcessor "android.arch.persistence.room:compiler:$room"
     kapt "android.arch.persistence.room:compiler:$room"
-}
-repositories {
-    mavenCentral()
 }
