--- a/involvd_sdk/build.gradle
+++ b/involvd_sdk/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
-group='com.github.iamrobj'
+group='com.github.involvd'
 
 android {
     compileSdkVersion 27
